<resources>
    <string name="fall_detected_text">Fall detected!</string>
    <string name="contacts_contacted">"Contacts contacted!"</string>
    <string name="account_created">Account created!</string>
    <string name="password">Password</string>
    <string name="settings_title">Settings</string>
    <string name="account_contact_description">Manage your account and add or remove contacts.</string>
    <string name="notifications_title">Notifications</string>
    <string name="welcome_title">Welcome to RADQ!</string>
    <string name="welcome_description">Your autonomous fall detector robot.</string>
    <string name="camera">Start RADQ</string>
    <string name="switch_front_back_camera">Activate back camera</string>
    <string name="emergency_title">Emergency</string>
    <string name="imOkay">I\'m Okay!</string>
    <string name="imNotOkay">HELP!</string>
    <string name="emergency_contact_will_be_contacted">Emergency contact will be contacted in</string>
    <string name="app_initials" translatable="false">RADQ</string>
    <string name="notifications_description">Notifications generated by RADQ</string>
    <string name="text_seconds">seconds</string>
    <string name="settings_description">Add an emergency contact here by using their email address!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="person_detected_text">Person detected</string>
    <string name="contact_alert_dialog_message">You must add a contact in the settingsStorage page before using RADQ.</string>
    <string name="contact_alert_dialog_title">No contacts found…</string>
    <string name="positive_button" translatable="false">OK</string>
    <string name="invalid_password">Weak password. Please use a password longer than 6 characters.</string>
    <string name="dialog_message_invalid_email">Invalid email</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="unknown_error_contact_register">Unknown error registering the contact</string>
    <string name="button_logout">Logout</string>
    <string name="button_login">Login</string>
    <string name="dialog_title_alert">Alert!</string>
    <string name="create_account">Create account</string>
    <string name="login_description">Sign in to connect to your safe contact. If you don\'t have an account, create one using the bottom button.</string>
    <string name="my_account_title">My account</string>
    <string name="my_contacts_title">My contacts</string>
    <string name="add_contact_button">Add a contact</string>
    <string name="toast_error_OpenCVLoader">Error: OpenCVLoader</string>
    <string name="add_contacts_title">Add contacts</string>
    <string name="button_save">Save</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="error_no_email">Please type a valid email</string>
    <string name="snackbar_error_contact_not_found">No contact found with provided email</string>
    <string name="error_empty_name_field">Please provide a name</string>
    <string name="snackbar_error_empty_email_field">Please provide an email</string>
    <string name="snackbar_error_empty_password_field">Please provide a password</string>
    <string name="alert_not_logged_title">Not logged…</string>
    <string name="alert_not_logged_message">Looks like you are not logged. Please login to access RADQ.</string>
    <string name="snackbar_contact_added_successfully">Contact added successfully</string>
    <string name="snackbar_unknown_error_adding_contact">Unknown error adding contact</string>
    <string name="snackbar_logged_out">Logged out!</string>
    <string name="snackbar_logged_in">Logged in!</string>
    <string name="aW1va2F5YnV0dG9ucHJlc3NlZA">Button \“I\'m okay\” pressed after fall detected.</string>
    <string name="aW1ub3Rva2F5YnV0dG9ucHJlc3NlZA">Button \“HELP\” pressed after fall detected.</string>
    <string name="YnV0dG9ubm90cHJlc3NlZHRpbWVzb3Zlcg">Buttons not pressed. Time\'s over after fall detected.</string>
    <string name="b3ZlcnJpZGUgb3IgYmF0dGVyeSBsb3cu">Fall detection deactivated.</string>
    <string name="dialog_message_disconnect_before_proceed">Please, logout from your current session before proceed.</string>
    <string name="advanced_settings">Advanced settingsStorage</string>
    <string name="my_contacts_description">Here\'s a list of your current contacts. If you would like to add one, click on the button below.</string>
    <string name="create_account_description">Create your RADQ account here.</string>
    <string name="dialog_title_loading_contacts">Please wait a moment…</string>
    <string name="dialog_message_loading_contacts">Your contacts are being loaded. This operation should not take more than a few seconds.</string>
    <string name="switch_enable_robot_instructions">Enable visual robot instructions</string>
    <string name="robot_instruction_forward">Forward</string>
    <string name="robot_instructions_backwards">Backwards</string>
    <string name="robot_instruction_stop">Stop</string>
    <string name="dialog_message_wrong_password">Wrong password</string>
    <string name="dialog_message_user_not_found">User not found</string>
    <string name="dialog_message_error_unknown_generic">Unknown error</string>
    <string name="toast_action_usb_permission_granted">USB permission granted</string>
    <string name="toast_action_usb_permission_not_granted">USB permission not granted</string>
    <string name="toast_action_no_usb">No USB connected</string>
    <string name="toast_action_usb_disconnected">USB disconnected</string>
    <string name="toast_action_usb_device_not_supported">USB device not supported</string>
    <string name="toast_error_initializeDetection">Error: initializeDetection</string>
    <string name="c3RhcnRpbmdmYWxsZGV0ZWN0aW9u">Fall detection started.</string>
    <string name="version">Version</string>
    <string name="button_shutdown_detection">Shutdown</string>
</resources>