<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emergencyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/emergencyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fall_detected"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textIsSelectable="false"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/emergencyContactWillBeContactedTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contact_will_be_contacted"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.0" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/imOkay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@android:color/holo_green_light"
            android:text="@string/imOkay"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/imNotOkay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/imNotOkay"
            android:textColor="#F44336"
            android:textSize="36sp" />
    </LinearLayout>

</LinearLayout>